<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="509dp"
    android:layout_marginBottom="444dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daun Sirih"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <ImageView
        android:id="@+id/alang"
        android:layout_width="500px"
        android:layout_height="500px"
        android:background="@drawable/daunsirih"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kegunaan"
        android:textSize="25sp"
        android:layout_below="@+id/alang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sirih1"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sirih2"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/textView1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sirih3"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sirih4"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sirih5"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

</RelativeLayout>